home displaying as original

--- a/interstate_sales/static/theme.css
+++ b/interstate_sales/static/theme.css
@@ -1,154 +1,135 @@
-@import url(//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700);
-body {
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  color: #ffffff;
-  background: #bc2131;
+
+/*Navigation menu
+------------------------------------------*/
+#nav,
+#nav ul {
+	list-style: none;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 300;
+#nav{
+	float: left;
 }
-p {
-  font-weight: 300;
+  #nav li {
+    display: inline;
 }
-.font-normal {
-  font-weight: 400;
+#nav > li {
+	float: left;
 }
-.font-semi-bold {
-  font-weight: 600;
+#nav li a {
+display: block;
+	height: 3em;
+	line-height: 3em;
+	padding: 0 0.9em;
+	text-decoration: none;
+	border-width:4px;
+	border-style:none;
 }
-.font-bold {
-  font-weight: 700;
+#nav ul {
+	position: absolute;
+	display: none;
+z-index: 999;
 }
-.starter-template {
-  margin-top: 250px;
+#nav ul li a {
+	width: 200px;
 }
-.starter-template .content {
-  margin-left: 10px;
+#nav li:hover ul {
+	display: block;
 }
-.starter-template .content h1 {
-  margin-top: 10px;
-  font-size: 60px;
+
+/* Main menu
+------------------------------------------*/
+#nav {
+	font-family: Arial;
+	font-size: 14px;
+	background:white;
 }
-.starter-template .content h1 .smaller {
-  font-size: 40px;
-  color: #f2b7bd;
+#nav > li > a {
+	color: black;
+	font-weight: bold;
 }
-.starter-template .content .lead {
-  font-size: 25px;
-  color: #f2b7bd;
+#nav > li:hover > a {
+	background:grey;
+	color: black;
 }
-.starter-template .content .lead .font-normal {
-  color: #ffffff;
+
+/* Submenu
+------------------------------------------*/
+#nav ul {
+	background: grey;
 }
-.starter-template .links {
-  float: right;
-  right: 0;
-  margin-top: 125px;
+#nav ul li a {
+	color:black;
 }
-.starter-template .links ul {
-  display: block;
-  padding: 0;
-  margin: 0;
+#nav ul li:hover a {
+	background:black;
+	color: gold;
 }
-.starter-template .links ul li {
-  list-style: none;
-  display: inline;
-  margin: 0 10px;
+
+
+
+
+/* contact form details
+------------------------------------------------*/
+label, input, textarea {
+font-family:inherit;
+float:left;
+clear:left;
+width:250px;
+font-weight:bold;
 }
-.starter-template .links ul li:first-child {
-  margin-left: 0;
+label {
+cursor:pointer;
 }
-.starter-template .links ul li:last-child {
-  margin-right: 0;
+input {
+padding:.2em;
+margin-bottom:.2em;
+background:#eee;
 }
-.starter-template .links ul li.current-version {
-  color: #f2b7bd;
-  font-weight: 400;
+textarea {
+height:120px;
+margin-bottom:.8em;
+overflow:auto;
+
+padding:.2em;
+margin-bottom:.2em;
+background:#eee;
 }
-.starter-template .links ul li a, a {
-  color: #f2b7bd;
-  text-decoration: underline;
+textarea {
+height:120px;
+margin-bottom:.8em;
+overflow:auto;
+padding:.2em;
+background:#eee;
 }
-.starter-template .links ul li a:hover, a:hover {
-  color: #ffffff;
-  text-decoration: underline;
+input.submit {
+width:5em;
+padding:.1em;
 }
-.starter-template .links ul li .icon-muted {
-  color: #eb8b95;
-  margin-right: 5px;
+input.reset {
+width:5em;
+padding:.1em;
 }
-.starter-template .links ul li:hover .icon-muted {
-  color: #ffffff;
+input:focus, textarea:focus, input:hover, textarea:hover {
+background:#C4DCF4;
+outline:0;
 }
-.starter-template .copyright {
-  margin-top: 10px;
-  font-size: 0.9em;
-  color: #f2b7bd;
-  text-transform: lowercase;
-  float: right;
-  right: 0;
+
+p {margin-left: 20px; margin-top: 20px; margin-right: 20px; margin-bottom: -5px; }
+
+* {margin: 0; padding: 0;}
+
+#wrap {
+	width: 980px;
+	margin: 0 auto;
 }
-@media (max-width: 1199px) {
-  .starter-template .content h1 {
-    font-size: 45px;
-  }
-  .starter-template .content h1 .smaller {
-    font-size: 30px;
-  }
-  .starter-template .content .lead {
-    font-size: 20px;
-  }
-}
-@media (max-width: 991px) {
-  .starter-template {
-    margin-top: 0;
-  }
-  .starter-template .logo {
-    margin: 40px auto;
-  }
-  .starter-template .content {
-    margin-left: 0;
-    text-align: center;
-  }
-  .starter-template .content h1 {
-    margin-bottom: 20px;
-  }
-  .starter-template .links {
-    float: none;
-    text-align: center;
-    margin-top: 60px;
-  }
-  .starter-template .copyright {
-    float: none;
-    text-align: center;
-  }
-}
-@media (max-width: 767px) {
-  .starter-template .content h1 .smaller {
-    font-size: 25px;
-    display: block;
-  }
-  .starter-template .content .lead {
-    font-size: 16px;
-  }
-  .starter-template .links {
-    margin-top: 40px;
-  }
-  .starter-template .links ul li {
-    display: block;
-    margin: 0;
-  }
-  .starter-template .links ul li .icon-muted {
-    display: none;
-  }
-  .starter-template .copyright {
-    margin-top: 20px;
-  }
+
+.scrollup {
+  width: 60px;
+  height: 60px;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 50px;
+  right: 100px;
+  display: none;
+  text-indent: -9999px;
+  background: url('arrow6.jpg') no-repeat;
 }
