--- a/interstate_sales/templates/home.jinja2
+++ b/interstate_sales/templates/home.jinja2
@@ -134,7 +134,8 @@
      <li id="contact"><a href="contact.html">Contact Us</a></li>
 
 </ul>
-
+{% block content %}
+{% endblock content %}
 
 
   <div id="content_1" style="background-color:black;color:white;height:415px;width:490px;float:left;">
