--- a/interstate_sales/templates/login.jinja2
+++ b/interstate_sales/templates/login.jinja2
@@ -1,25 +1,27 @@
 {% extends 'base.jinja2' %}
 
 {% block content %}
-
-<section class="entry">
-  <h3 class="entry-title">Login</h3>
-
-  <form class="new_entry" method="POST">
-    <p>
-      <label for="username">Enter your username: </label>
-      <input type="text" name="username">
-    </p>
-    <br>
-    <p class="text">
-      <label for="password">Enter your password: </label>
-      <input type="password" name="password">
-    </p>
-    <br>
-    <p>
-      <input type="submit" name="Login">
-    </p>
-  </form>
-</section>
-
+  <div id="header" style="background-color:white;height:50px;width:980px;float:left;"></div>
+  <section class="entry">
+    <h3 class="entry-title">Login</h3>
+    {% if res %}
+      <p style="color: red;"><b>{{ res }}</b></p>
+    {% endif %}
+    <form class="new_entry" method="POST">
+      <p>
+        <label for="username">Enter your username: </label>
+        <input type="text" name="username">
+      </p>
+      <br>
+      <p class="text">
+        <label for="password">Enter your password: </label>
+        <input type="password" name="password">
+      </p>
+      <br>
+      <p>
+        <input type="submit" name="Login">
+      </p>
+    </form>
+  </section>
+  <div id="header" style="background-color:white;height:50px;width:980px;float:left;"></div>
 {% endblock %}
