--- a/interstate_sales/static/theme.css
+++ b/interstate_sales/static/theme.css
@@ -133,3 +133,8 @@ p {margin-left: 20px; margin-top: 20px; margin-right: 20px; margin-bottom: -5px;
   text-indent: -9999px;
   background: url('arrow6.jpg') no-repeat;
 }
+
+center {
+	margin-left: 2rem;
+	margin-right: 1rem;
+}
