--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -4,7 +4,7 @@
     <meta name="description" content="Interstate Sales has been selling top quality highway safety devices for over 40 years!At Interstate Sales our mission is to provide our customers with excellent products and outstanding customer service. We are a wholesale distributor, which means you save on the price." />
     <meta name="keywords" content=" Gregory guardrail, EKT end treatment, Fleat end treatment,traffic paint,traffic signs,highway safety materials,ennis paint,graco, impact recovery, sign posts,sign hardware,stencils, corten,road signs, delineators, channelizers, tubular post, square posts, u-channel post, sign brackets, sign mounting, custom signs, trash bags, batteries, barricades, thermoplastic, flashers, caution tape, glass beads, reflective beads, flint, hotape,premark, potters, swarco, transpo, pavement markers, RPM, centermount reflectors, bituminous, hot melt adhesive, stick'n'stomp, epoxy, primer, reflective tape, sign blanks, reflective sheeting, 3m, ekt, skt, sand bags, big sandy, crash barrels, cones, reflective cones, loopers, ringtop, downing bituminous applicators, crack sealant, cold patch, pothole patch,">
     <meta charset="UTF-8" />
-    <!-- <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.10.1.min.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.10.1.min.js"></script>
     <script type="text/javascript">document.documentElement.className = 'js';</script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js" type="text/javascript"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
@@ -16,9 +16,9 @@
           } else {
               $('.scrollup').fadeOut();
           }
-        }
+        })
       });
-    </script> -->
+    </script>
     <link href="{{request.static_url('interstate_sales:static/theme.css')}}" rel="stylesheet">
     <title>Interstate Sales - Homepage</title>
 
@@ -35,97 +35,100 @@
     </a>
 
     <ul id="nav">
-  	  <li id="home"><a href="{{request.route_url('home')}}">Home</a></li>
-  	  <li id="guardrail"><a href="{{request.route_url('guardrail')}}">Guardrail</a>
-  		  <ul>
-          <li><a href="guardrail.html#guardrail">Guardrail</a></li>
-  			  <li><a href="guardrail.html#end%20treatment">End Treatments</a></li>
-          <li><a href="guardrail.html#post">Posts</a></li>
-  			  <li><a href="guardrail.html#steel_rail">Steel Rail</a></li>
-          <li><a href="guardrail.html#weedmat">Weedmat</a></li>
+      <li id="home"><a href="{{request.route_url('home')}}">Home</a></li>
+      <li id="guardrail"><a href="{{request.route_url('guardrail')}}">Guardrail</a>
+        <ul>
+          {% for item in subcategories %}
+            {% if '/guardrail' in request.path %}
+              <li><a href="#{{ item.replace(' ', '').lower() }}">{{ item }}</a></li>
+            {% else %}
+              <li><a href="{{request.route_url('guardrail')}}#{{ item.replace(' ', '').lower() }}">{{ item }}</a></li>
+            {% endif %}
+          {% endfor %}
         </ul>
       </li>
       <li id="paint">
-    		<a href="traffic_paint.html">Traffic Paint</a>
-    		<ul>
+        <a href="traffic_paint.html">Traffic Paint</a>
+        <ul>
           <li><a href="traffic_paint.html#water-based">Water-Based</a></li>
           <li><a href="traffic_paint.html#solvent-based">Solvent-Based</a></li>
           <li><a href="traffic_paint.html#thermo">Thermoplastic</a></li>
-    			<li><a href="traffic_paint.html#marking%20paint">Marking Paint</a></li>
-    			<li><a href="traffic_paint.html#coating">Coating</a></li>
-    			<li><a href="traffic_paint.html#stencils">Stencils</a></li>
+          <li><a href="traffic_paint.html#marking%20paint">Marking Paint</a></li>
+          <li><a href="traffic_paint.html#coating">Coating</a></li>
+          <li><a href="traffic_paint.html#stencils">Stencils</a></li>
         </ul>
-    	</li>
+      </li>
 
-    	<li id="pavement%20markings">
-    		<a href="pavement_markings.html">Pavement Markings</a>
-    		<ul>
+      <li id="pavement%20markings">
+        <a href="pavement_markings.html">Pavement Markings</a>
+        <ul>
           <li><a href="pavement_markings.html#markers">Markers</a></li>
-    			<li><a href="pavement_markings.html#bituminous">Bituminous</a></li>
+          <li><a href="pavement_markings.html#bituminous">Bituminous</a></li>
           <li><a href="pavement_markings.html#beads">Traffic Beads</a></li>
-    			<li><a href="pavement_markings.html#adhesive">Adhesive</a></li>
+          <li><a href="pavement_markings.html#adhesive">Adhesive</a></li>
           <li><a href="pavement_markings.html#pl_safety">Parking Lot Safety</a></li>
         </ul>
-    	</li>
-    	<li id="construction%20safety">
-    		<a href="construction_safety.html">Construction Safety</a>
-    		<ul >
+      </li>
+      <li id="construction%20safety">
+        <a href="construction_safety.html">Construction Safety</a>
+        <ul >
           <li><a href="construction_safety.html#barricades">Barricades</a></li>
-    			<li><a href="construction_safety.html#cones">Cones</a></li>
+          <li><a href="construction_safety.html#cones">Cones</a></li>
           <li><a href="construction_safety.html#delineators">Delineators</a></li>
-    			<li><a href="construction_safety.html#sign-stands">Sign Stands</a></li>
-    			<li><a href="construction_safety.html#traffic%20control">Traffic Control</a></li>
-    			<li><a href="construction_safety.html#tools">Tools</a></li>
-    			<li><a href="construction_safety.html#batteries">Batteries</a></li>
+          <li><a href="construction_safety.html#sign-stands">Sign Stands</a></li>
+          <li><a href="construction_safety.html#traffic%20control">Traffic Control</a></li>
+          <li><a href="construction_safety.html#tools">Tools</a></li>
+          <li><a href="construction_safety.html#batteries">Batteries</a></li>
 
         </ul>
-    	</li>
-    	<li id="signs">
-    		<a href="signs.html">Signs</a>
-    		<ul>
+      </li>
+      <li id="signs">
+        <a href="signs.html">Signs</a>
+        <ul>
           <li><a href="signs.html#regulatory_signs">Regulatory</a></li>
-    			<li><a href="signs.html#warning">Warning</a></li>
+          <li><a href="signs.html#warning">Warning</a></li>
           <li><a href="signs.html#guide">Guide</a></li>
-    			<li><a href="signs.html#construction">Construction</a></li>
-    			<li><a href="signs.html#blanks">Sign Blanks</a></li>
-    			<li><a href="signs.html#address">Address Signs</a></li>
+          <li><a href="signs.html#construction">Construction</a></li>
+          <li><a href="signs.html#blanks">Sign Blanks</a></li>
+          <li><a href="signs.html#address">Address Signs</a></li>
           <li><a href="signs.html#custom">Custom Signs</a></li>
-    			<li><a href="signs.html#ada">ADA Signs</a></li>
-    			<li><a href="signs.html#temporary_signs">Temporary</a></li>
-    			<li><a href="signs.html#roll-ups">Roll-up</a></li>
-    			<li><a href="signs.html#tape">Reflective Tape</a></li>
-    			<li><a href="signs.html#hardware">Sign Hardware</a></li>
-    			<li><a href="signs.html#posts">Sign Posts</a></li>
+          <li><a href="signs.html#ada">ADA Signs</a></li>
+          <li><a href="signs.html#temporary_signs">Temporary</a></li>
+          <li><a href="signs.html#roll-ups">Roll-up</a></li>
+          <li><a href="signs.html#tape">Reflective Tape</a></li>
+          <li><a href="signs.html#hardware">Sign Hardware</a></li>
+          <li><a href="signs.html#posts">Sign Posts</a></li>
         </ul>
-    	</li>
-    	<li id="equipment">
-    		<a href="equipment.html">Equipment</a>
-    		<ul>
+      </li>
+      <li id="equipment">
+        <a href="equipment.html">Equipment</a>
+        <ul>
           <li><a href="equipment.html#graco">Graco</a></li>
           <li><a href="equipment.html#downing">Downing</a></li>
           <li><a href="equipment.html#arrow_boards">Arrow Boards</a></li>
-    			<li><a href="equipment.html#message_boards">Message Boards</a></li>
-    	  </ul>
-    	</li>
+          <li><a href="equipment.html#message_boards">Message Boards</a></li>
+        </ul>
+      </li>
 
-    	<li id="our%20team">
-    		<a href="our_team.html">Our Team</a>
-    		<ul>
+      <li id="our%20team">
+        <a href="our_team.html">Our Team</a>
+        <ul>
           <li><a href="our_team.html#lee">Lee</a></li>
           <li><a href="our_team.html#mike">Mike</a></li>
           <li><a href="our_team.html#jane">Jane</a></li>
-    			<li><a href="our_team.html#courtney">Courtney</a></li>
-    			<li><a href="our_team.html#john">John</a></li>
-    			<li><a href="our_team.html#leslie">Leslie</a></li>
-    			<li><a href="our_team.html#kimmy">Kimmy</a></li>
-    			<li><a href="our_team.html#ed">Ed</a></li>
-    			<li><a href="our_team.html#thomas">Thomas</a></li>
-    			<li><a href="our_team.html#kevin">Kevin</a></li>
-    			<li><a href="our_team.html#val">Val</a></li>
-    			<li><a href="our_team.html#lou">Lou</a></li>
-    		</ul>
+          <li><a href="our_team.html#courtney">Courtney</a></li>
+          <li><a href="our_team.html#john">John</a></li>
+          <li><a href="our_team.html#leslie">Leslie</a></li>
+          <li><a href="our_team.html#kimmy">Kimmy</a></li>
+          <li><a href="our_team.html#ed">Ed</a></li>
+          <li><a href="our_team.html#thomas">Thomas</a></li>
+          <li><a href="our_team.html#kevin">Kevin</a></li>
+          <li><a href="our_team.html#val">Val</a></li>
+          <li><a href="our_team.html#lou">Lou</a></li>
+        </ul>
       <li id="contact"><a href="contact.html">Contact Us</a></li>
     </ul>
+
     {% block content %}
     {% endblock content %}
 
