--- a/interstate_sales/templates/guardrail.jinja2
+++ b/interstate_sales/templates/guardrail.jinja2
@@ -1,32 +1,37 @@
 {% extends "base.jinja2" %}
-<%
-from pyramid.security import authenticated_userid
-user_id = authenticated_userid(request)
-%>
+
 {% block content %}
 
   {% for category in subcategories %}
+
     {% if category == 'Guardrail' %}
-      <div id="header" style="background-color:gold;height:75px;width:250px;float:left;"><a name="{{ category }}"></a><center><p></p><h2 style="padding-top: .5rem;">{{ category }}</h2><p></p></center></div>
+
+      <div id="{{ category }}" style="background-color:gold;height:75px;width:250px;float:left;"><a name="{{ category }}"></a><center><p></p><h2 style="padding-top: .5rem;">{{ category }}</h2><p></p></center></div>
       <div id="header" style="background-color:gold;height:75px;width:500px;float:left;"></div>
       <div id="header" style="background-color:gold;height:75px;width:230px;float:left;"><center><p></p><h4> For Pricing Please Call<br> 800-237-7245</h4><p></p></center></div>
     {% else %}
-      <div id="header1" style="background-color:gold;height:75px;width:980px;float:left;"><a name="{{ category }}"></a><p></p><h2 style="padding-top: .5rem;">&emsp;&emsp;&emsp;{{ category }}</h2><p></p>
+      <div id="{{ category.replace(' ', '').lower() }}" style="background-color:gold;height:75px;width:980px;float:left;"><a name="{{ category }}"></a><p></p><h2 style="padding-top: .5rem;">&emsp;&emsp;&emsp;{{ category }}</h2><p></p>
       </div>
     {% endif %}
+    <div id="header" style="background-color:white;height:50px;width:980px;float:left;"></div>
     {% for item in guardrails %}
       {% if item.subcategory == category %}
-        <div id="header" style="background-color:white;height:50px;width:980px;float:left;"></div>
-        <div id="menu" style="background-color:white;height:300px;width:250px;float:left;">
+
+        <div id="menu" style="background-color:white;height:250px;width:250px;float:left;">
           <center>
             <img src="{{request.static_url('interstate_sales:static/')}}{{ item.img }}" alt="{{ item.title }}" style="max-width: 225px; max-height: 170px;">
           </center>
         </div>
         <div id="content" style="background-color:white;height:250px;width:730px;float:left;">
           <center>
-            <p></p><h5>{{ item.title }}</h5><br>{{ item.markdown | safe }}<p></p>
+            <p></p><h4>{{ item.title }}</h4><br>{{ item.markdown | safe }}<p></p>
           </center>
         </div>
+        {% if auth %}
+          <p>
+            <input type="submit" name="Edit" value="Edit">
+          </p><hr style="width:980px;float:left;">
+        {% endif %}
       {% endif %}
     {% endfor %}
   {% endfor %}
