--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -128,6 +128,21 @@
         </ul>
       <li id="contact"><a href="contact.html">Contact Us</a></li>
     </ul>
+    {% if auth %}
+      <div id="header" style="background-color:white;height:25px;width:980px;float:left;"></div>
+
+      <div id="header" style="background:grey;height:50px;width:980px;float:left;">
+
+      <div>
+        <form class="" action="item/new-entry" method="get">
+
+          <input style="margin-top: .75rem; margin-left: .75rem;" type="submit" value="Add Item"}>
+        </form>
+      </div>
+      </div>
+      <div id="header" style="background-color:white;height:25px;width:980px;float:left;"></div>
+
+    {% endif %}
 
     {% block content %}
     {% endblock content %}
