--- a/interstate_sales/templates/edit.jinja2
+++ b/interstate_sales/templates/edit.jinja2
@@ -3,6 +3,8 @@
 {% block content %}
 
 <section class="entry">
+<div id="header" style="background-color:white;height:50px;width:980px;float:left;"></div>
+<p></p><br>
   <h3 class="entry-title">Edit entry:</h3>
   <form method="POST">
       <p>
