--- a/interstate_sales/templates/entry.jinja2
+++ b/interstate_sales/templates/entry.jinja2
@@ -3,6 +3,8 @@
 {% block content %}
 
 <section class="entry">
+<div id="header" style="background-color:white;height:50px;width:980px;float:left;"></div>
+<p></p><br>
   <h3 class="entry-title">Add New Item:</h3>
 
   <form class="new_entry" method="POST">
@@ -35,7 +37,7 @@
   <p>
 
         <input type="submit" name="Add Item" />
-    
+
   </p>
   </form>
 </section>
