--- a/interstate_sales/templates/edit.jinja2
+++ b/interstate_sales/templates/edit.jinja2
@@ -4,8 +4,7 @@
 
 <section class="entry">
 <div id="header" style="background-color:white;height:50px;width:980px;float:left;"></div>
-<p></p><br>
-  <h3 class="entry-title">Edit entry:</h3>
+<p></p><br><h2 class="entry-title">Edit entry:</h2>
   <form method="POST">
       <p>
           <label for="category">Category: </label>
