--- a/interstate_sales/templates/entry.jinja2
+++ b/interstate_sales/templates/entry.jinja2
@@ -22,7 +22,7 @@
   <br>
   <p class="text">
       <label for="markdown">Body: </label>
-      <textarea type='text' name="markdown">Enter Body:</textarea>
+      <textarea style="width: 50%; type='text' name="markdown">Enter Body:</textarea>
   </p>
   <p class="text">
       <label for="img">Image Name: </label>
@@ -30,7 +30,7 @@
   </p>
   <p class="text">
       <label for="extra">Extra: </label>
-      <textarea type='text' name="extra">Enter Extra Info:</textarea>
+      <textarea style="width: 50%; type='text' name="extra">Enter Extra Info:</textarea>
   </p>
   <br>
   <p>
