--- a/interstate_sales/templates/entry.jinja2
+++ b/interstate_sales/templates/entry.jinja2
@@ -30,7 +30,7 @@
   </p>
   <p class="text">
       <label for="extra">Extra: </label>
-      <textarea style="width: 50%; type='text' name="extra">Enter Extra Info:</textarea>
+      <textarea style="width: 50%;" type='text' name="extra">Enter Extra Info:</textarea>
   </p>
   <br>
   <p>
