--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -126,8 +126,20 @@
         </ul>
       <li id="contact"><a href="contact.html">Contact Us</a></li>
     </ul>
+
+
+    <div id="header" style="background:gold;height:50px;width:980px;float:left;">
+
+      <div>
+        <form class="" action="search" method="post">
+          <input type="text" name="search" maxlength="25" value="" style="width: 15rem; float: right; position: absolute; margin-top: .75rem; margin-left: .75rem;">
+          <input style="margin-top: .75rem; margin-left: 17rem; width: 6rem; left: 18rem;" type="submit" value="Search"}>
+        </form>
+      </div>
+    </div>
+    <div id="header" style="background-color:white;height:25px;width:980px;float:left;"></div>
+
     {% if auth %}
-      <div id="header" style="background-color:white;height:25px;width:980px;float:left;"></div>
 
       <div id="header" style="background:grey;height:50px;width:980px;float:left;">
 
