--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -113,8 +113,8 @@
         </ul>
       </li>
 
-      
-      <li id="contact"><a href="contact.html">Contact Us</a></li>
+
+      <li id="contact"><a href="{{request.route_url('contact')}}">Contact Us</a></li>
     </ul>
 
 
